@@ -1,6 +1,9 @@
 2017-11-06 Magnus Hagdorn
+ * piccolo2/pplayer.py: add option to print version
+
+2017-11-06 Magnus Hagdorn
  * piccolo2/player/__init__.py: set __version__
-  * setup.py: get version from hg tag
+ * setup.py: get version from hg tag
 
 2017-02-27 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: fail gracefully if player becomes
